--- a/cloud-vue/public/index.html
+++ b/cloud-vue/public/index.html
@@ -211,6 +211,7 @@
       opacity: 1;
       line-height: 30px;
     }
+
     #loader-wrapper .load_title span {
       font-weight: normal;
       font-style: italic;
@@ -229,7 +230,7 @@
     <div id="loader"></div>
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
-    <div class="load_title">正在加载资源,请耐心等待
+    <div class="load_title">正在加载资源，请耐心等待
     </div>
   </div>
 </div>
